增加推广页面家微信分享

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="email=no">
-    <title>四川聚康</title>
+    <title>聚康供采平台</title>
     <style>
     
       .goods-detail-desc{
